--- a/src/app/containers/header/home/home.component.html
+++ b/src/app/containers/header/home/home.component.html
@@ -5,7 +5,7 @@
           <div class="text-1">Hello, my name is</div>
           <div class="text-2">Thuy Hoang</div>
           <div class="text-3">And I'm a Front-end Developer</div>
-          <a href="#">Hire me</a>
+          <a href="../../../../assets/pdf/portfolio_sketch.pdf" target="_blank">See my resume</a>
       </div>
   </div>
 </section>
