--- a/src/app/containers/header/navbar/navbar.component.css
+++ b/src/app/containers/header/navbar/navbar.component.css
@@ -24,33 +24,17 @@
     font-weight: 600;
     font-family: 'Lora', serif;
 }
-.navbar .menu li{
-    list-style: none;
-    display: inline-block;
-}
-.navbar .menu li a{
-    display: block;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    margin-left: 2rem;
-    transition: color 0.3s ease;
-}
-.navbar .menu li a:hover{
-    color: crimson;
-}
-.navbar.sticky .menu li a:hover{
-    color: crimson;
-}
+
 /* menu btn styling */
 .menu-btn{
     color: #fff;
     font-size: 23px;
     cursor: pointer;
     display: none;
+    background-color: transparent;
 }
 /*responsive*/
-@media (max-width: 947px){
+@media (max-width: 750px){
     .navbar{
         padding: 10px;
     }
@@ -63,27 +47,5 @@
     }
     .menu-btn i.active:before{
         content: "\f00d";
-    }
-    .navbar .menu{
-        position: fixed;
-        height: 100vh;
-        width: 100%;
-        left: -100%;
-        top: 0;
-        background: #111;
-        text-align: center;
-        padding-top: 80px;
-        transition: all 0.3s ease;
-    }
-    .navbar .menu.active{
-        left: 0;
-    }
-    .navbar .menu li{
-        display: block;
-    }
-    .navbar .menu li a{
-        display: inline-block;
-        margin: 20px 0;
-        font-size: 25px;
     }
 }
