--- a/src/app/containers/header/navbar/navbar.component.html
+++ b/src/app/containers/header/navbar/navbar.component.html
@@ -1,19 +1,14 @@
-<div class="scroll-up-btn">
-    <i class="fas fa-angle-up"></i>
-</div>
 <nav class="navbar">
     <div class="max-width">
         <div class="logo"><a href="#">Thuy Hoang</a></div>
-        <ul class="menu">
-            <li><a href="#home" class="menu-btn">Home</a></li>
-            <li><a href="#about" class="menu-btn">About</a></li>
-            <li><a href="#skills" class="menu-btn">Skills</a></li>
-            <li><a href="#works" class="menu-btn">Works</a></li>
-            <li><a href="#contact" class="menu-btn">Contact</a></li>
-        </ul>
-        <div class="menu-btn">
-            <i class="fas fa-bars"></i>
+        <div class="mobile-screen" *ngIf="!bigScreen">
+        <div class="menu-toggle">
+            <div (click)="onToggle()" class="menu-btn">
+                <i class="fas fa-bars"></i>
         </div>
-       
+        </div>
+        <app-nav-menu *ngIf="showToggle"></app-nav-menu>
+        </div>
+        <app-nav-menu *ngIf="bigScreen"></app-nav-menu>
     </div>
 </nav>
