--- a/src/app/containers/skills/skills.component.css
+++ b/src/app/containers/skills/skills.component.css
@@ -1,17 +1,16 @@
 .skills{
     color:rgb(44, 42, 42);
     background: #f5f3ed;
+
 }
-.skills .title::before,
-.teams .title::before{
+.skills .title::before{
     background: #111;
 }
-.skills .title::after,
-.teams .title::after{
+.skills .title::after{
     content: "What I Have";
 }
 .skills .skills-content .card{
-    width: calc(33% - 20px);
+    width: calc(33% - 30px);
     background: #302e28;
     text-align: center;
     border-radius: 6px;
@@ -19,6 +18,10 @@
     cursor: pointer;
     transition: all 0.3s ease;
     color: white;
+    margin-left: 20px;
+    margin-right: auto;
+    margin-bottom: auto;
+    margin-top: auto;
 }
 .skills .skills-content .card:hover{
     background: crimson;
