--- a/src/app/containers/header/navbar/nav-menu/nav-menu.component.html
+++ b/src/app/containers/header/navbar/nav-menu/nav-menu.component.html
@@ -1,7 +1,3 @@
 <ul class="menu" id="showToggle" >
-    <li><a href="#home" class="menu-btn">Home</a></li>
-    <li><a href="#about" class="menu-btn">About</a></li>
-    <li><a href="#skills" class="menu-btn">Skills</a></li>
-    <li><a href="#works" class="menu-btn">Works</a></li>
-    <li><a href="#contact" class="menu-btn">Contact</a></li>
+    <li *ngFor="let section of sections; let i = index" (click)="onNavLinkClicked($event)"><a href="{{section.id}}" ><span class="menu-btn">{{section.name}}</span></a></li>
 </ul>
