--- a/src/app/containers/header/navbar/navbar.component.css
+++ b/src/app/containers/header/navbar/navbar.component.css
@@ -49,3 +49,47 @@
         content: "\f00d";
     }
 }
+/*menu*/
+.menu li{
+    list-style: none;
+    display: inline-block;
+}
+.menu li a{
+    display: block;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 2rem;
+    transition: color 0.3s ease;
+}
+.menu li a:hover{
+    color: crimson;
+}
+.menu li a:hover{
+    color: crimson;
+}
+
+@media (max-width: 750px){
+    #showToggle{
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        left: 0;
+        top: 3.25rem;
+        padding-top: 80px;
+        text-align: center;
+        background-color: #37342b;
+        transition: all 0.3s ease;
+    }
+    #showToggle .active{
+        left: 0;
+    }
+    #showToggle li{
+        display: block;
+    }
+    #showToggle li a{
+        display: inline-block;
+        margin: 20px 0;
+        font-size: 22px;
+    }
+}
