--- a/src/app/containers/contact/contact.component.css
+++ b/src/app/containers/contact/contact.component.css
@@ -1,18 +1,10 @@
 
 /* contact section styling */
+.max-width{
+    width: 50%;
+}
 .contact{
     background-color: #f5f3ed;
-}
-.contact .title::after{
-    content: "get in touch";
-    background-color: #f5f3ed;
-}
-.contact .contact-content .column{
-    width: calc(50% - 20px);
-    margin-right: 20px;
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: auto;
 }
 .contact .contact-content .text{
     font-size: 20px;
@@ -22,9 +14,6 @@
     margin-bottom: 2rem;
     margin-right: auto;
     margin-left: auto;
-}
-.contact .contact-content .column{
-    margin-bottom: 1rem;
 }
 .contact .contact-content .right p{
     text-align: justify;
@@ -40,6 +29,7 @@
 }
 .contact .contact-content .row .info{
     margin-left: 30px;
+    
 }
 .contact .contact-content .row i{
     font-size: 25px;
@@ -61,66 +51,10 @@
 .contact .contact-content .info .sub-title{
     color: #333;
 }
-.contact .left form .fields{
-    display: flex;
-}
-.contact .left form .field,
-.contact .left form .fields .field{
-    height: 50px;
-    width: 100%;
-    margin-bottom: 15px;
-}
-.contact .left form .textarea{
-    height: 140px;
-    width: 100%;
-}
-.contact .left form .name{
-    margin-right: 10px;
-}
-.contact .left form .field input,
-.contact .left form .textarea textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
-    font-size: 17px;
-    font-family: 'Roboto', sans-serif;
-    transition: all 0.3s ease;
-}
-.contact .left form .field input:focus,
-.contact .left form .textarea textarea:focus{
-    border-color: #b3b3b3;
-}
-.contact .left form .textarea textarea{
-  padding-top: 10px;
-  resize: none;
-}
-.contact .left form .button-area{
-  display: flex;
-  align-items: center;
-}
-.left form .button-area button{
-    color: #fff;
-    display: block;
-    width: 160px!important;
-    height: 45px;
-    outline: none;
-    font-size: 18px;
-    font-weight: 500;
-    border-radius: 6px;
-    cursor: pointer;
-    flex-wrap: nowrap;
-    background: crimson;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
-  }
-  .left form .button-area button:hover{
-    color: crimson;
-    background: none;
-  }
   @media (max-width: 750px) {
+    .max-width{
+        width: 100%;
+    }
     .contact .max-width{
         padding: 2rem auto;
     }
