--- a/src/app/containers/header/navbar/navbar.component.css
+++ b/src/app/containers/header/navbar/navbar.component.css
@@ -61,6 +61,7 @@
     font-weight: 500;
     margin-left: 2rem;
     transition: color 0.3s ease;
+    font-family: 'Roboto', sans-serif;
 }
 .menu li a:hover{
     color: crimson;
