Change all icons to angular material icons

--- a/src/app/containers/contact/contact.component.html
+++ b/src/app/containers/contact/contact.component.html
@@ -7,21 +7,21 @@
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos harum corporis fuga corrupti. Doloribus quis soluta nesciunt veritatis vitae nobis?</p>
                 <div class="icons">
                     <div class="row">
-                        <i class="fas fa-user"></i>
+                        <mat-icon>perm_identity</mat-icon>
                         <div class="info">
                             <div class="head">Name</div>
                             <div class="sub-title">Thuy Hoang</div>
                         </div>
                     </div>
                     <div class="row">
-                        <i class="fas fa-map-marker-alt"></i>
+                        <mat-icon>home</mat-icon>
                         <div class="info">
                             <div class="head">Address</div>
                             <div class="sub-title">Toronto, Canada</div>
                         </div>
                     </div>
                     <div class="row">
-                        <i class="fas fa-envelope"></i>
+                        <mat-icon> email</mat-icon>
                         <div class="info">
                             <div class="head">Email</div>
                             <div class="sub-title">thuyhoang.to.ca@gmail.com</div>
