--- a/src/app/containers/contact/contact.component.css
+++ b/src/app/containers/contact/contact.component.css
@@ -31,7 +31,7 @@
     margin-left: 30px;
     
 }
-.contact .contact-content .row i{
+.contact .contact-content .row .mat-icon{
     font-size: 25px;
     color: #302e28;
 }
