--- a/src/app/containers/works/works.component.html
+++ b/src/app/containers/works/works.component.html
@@ -4,7 +4,9 @@
         <div class="works-content">
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 1</div>
                     </div>
                     <div class="back-face">
@@ -16,7 +18,9 @@
                 </div>
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 2</div>
                     </div>
                     <div class="back-face">
@@ -28,7 +32,9 @@
                 </div>
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 3</div>
                     </div>
                     <div class="back-face">
@@ -40,7 +46,9 @@
                 </div>
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 1</div>
                     </div>
                     <div class="back-face">
@@ -52,7 +60,9 @@
                 </div>
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 2</div>
                     </div>
                     <div class="back-face">
@@ -64,7 +74,9 @@
                 </div>
                 <div class="box">
                     <div class="front-face">
-                        <i class="fas fa-paint-brush"></i>
+                        <div class="icon">
+                            <mat-icon [inline]="true">class</mat-icon>
+                        </div>
                         <div class="text">Project 3</div>
                     </div>
                     <div class="back-face">
