--- a/src/styles.css
+++ b/src/styles.css
@@ -116,3 +116,5 @@ section .title::after{
         line-height: 38px;
     } */
 } 
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
