Fully change from css to scss

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,13 @@
 html{
     scroll-behavior: smooth;
 }
+html, body {
+     height: 100%; 
+}
+body {
+     margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; 
+}
+
 /* custom scroll bar */
 ::-webkit-scrollbar {
     width: 10px;
@@ -88,33 +95,5 @@ section .title::after{
     }
 }
 @media (max-width: 500px) {
-    /* .home .home-content .text-2{
-        font-size: 50px;
-    }
-    .home .home-content .text-3{
-        font-size: 27px;
-    }
-    .about .about-content .right .text{
-        font-size: 19px;
-    }
-    .contact .right form .fields{
-        flex-direction: column;
-    }
-    .contact .right form .name,
-    .contact .right form .email{
-        margin: 0;
-    }
-    .right form .error-box{
-       width: 150px;
-    }
-    .scroll-up-btn{
-        right: 15px;
-        bottom: 15px;
-        height: 38px;
-        width: 35px;
-        font-size: 23px;
-        line-height: 38px;
-    } */
+ 
 } 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
