Change style of skills icon

--- a/src/app/containers/skills/skills.component.scss
+++ b/src/app/containers/skills/skills.component.scss
@@ -38,7 +38,7 @@
     color: crimson !important;
 }
 .skills .skills-content .card:hover .icon.color{
-    color: #302e28;
+    color: #fff;
 }
 .skills .skills-content .card .text{
     font-size: 25px;
